translation for holosphere, shield and other stuff

--- a/src/main/resources/assets/tetra/lang/zh_cn.json
+++ b/src/main/resources/assets/tetra/lang/zh_cn.json
@@ -70,7 +70,7 @@
   "tetra.stats.ranged_speed_normalized.tooltip": "将拉弓速度改变 §e%s 秒",
 
   "tetra.stats.shield_speed": "冷却",
-  "tetra.stats.shield_speed.tooltip": "这个盾牌使用能力后有 §e%s §r秒的基础冷却",
+  "tetra.stats.shield_speed.tooltip": "这个盾牌使用功能后有 §e%s §r秒的基础冷却",
 
   "tetra.stats.shield_speed_normalized": "速度",
   "tetra.stats.shield_speed_normalized.tooltip": "将基础冷却改变 §e%s §r秒",
@@ -85,7 +85,7 @@
   "tetra.stats.ranged_damage.tooltip": "弹射物在从拉满的弓射出时造成 §e%s §r的基础伤害",
 
   "tetra.stats.shield_damage": "伤害",
-  "tetra.stats.shield_damage.tooltip": "盾牌使用能力时的基础伤害量是 §e%s",
+  "tetra.stats.shield_damage.tooltip": "盾牌使用功能时的基础伤害量是 §e%s",
 
   "tetra.stats.bleeding": "流血",
   "tetra.stats.bleeding.tooltip": "攻击生物时有 30%% 的概率使它们以 §e%s§r 的伤害持续流血 2 秒",
@@ -102,7 +102,7 @@
   "tetra.stats.blocking": "防御",
   "tetra.stats.blocking.tooltip": "按住右键可以防御受到的攻击和弹射物",
   "tetra.stats.blocking_duration.tooltip": "按住右键可以防御受到的攻击和弹射物，最多持续 §e%s§r 秒",
-  "tetra.stats.blocking.tooltip_extended": "如果这个物品有第二个能力，那么那个能力可以通过按下 shift + 右键，或在右键松开时按住 shift（这会触发一个延长了 50%% 的冷却）。",
+  "tetra.stats.blocking.tooltip_extended": "如果这个物品有第二个功能，那么那个功能可以通过按下 shift + 右键，或在右键松开时按住 shift（这会触发一个延长了 50%% 的冷却）。",
 
   "tetra.stats.blocking_reflect.tooltip": "§e反伤\n§7防御近战伤害时有 §e%s§7 的概率对攻击者造成 §e%s§7 的伤害，并产生击退效果。\n",
 
@@ -1062,12 +1062,12 @@
   "tetra.variant.machete/knightmetal.prefix": "骑士金属",
 
   "tetra/schema/sword/stonecutter.name": "切石器",
-  "tetra/schema/sword/stonecutter.description": "用切石器替换当前的剑刃。这是一把能轻易切开岩石的剑刃。",
+  "tetra/schema/sword/stonecutter.description": "用切石器替换当前的剑刃。这是一把能轻易切开岩石的沉重的剑刃。",
   "tetra/schema/sword/stonecutter.slot1": "切石器",
 
   "tetra.module.sword/stonecutter.item_name": "切石器",
   "tetra.module.sword/stonecutter.name": "切石器",
-  "tetra.module.sword/stonecutter.description": "一把能轻易切开岩石的剑刃。",
+  "tetra.module.sword/stonecutter.description": "一把能轻易切开岩石的沉重的剑刃。",
   "tetra.variant.stonecutter/stonecutter": "切石器",
 
   "tetra/schema/double/shared_head/hone_durability_1.name": "打磨：耐久 I",
@@ -2914,7 +2914,7 @@
   "tetra.improvement.enchantment/bluepower_disjunction.description": "对末影人和末影龙的伤害增加。",
   "tetra.improvement.destabilized/bluepower_disjunction.name": "§5不稳定：解离",
   "tetra.improvement.destabilized/bluepower_disjunction.description": "减少解离附魔的效果",
-  "tetra.improvement.enchantment/ensorcellation_magic_protection.name": "Magic Protection",
+  "tetra.improvement.enchantment/ation_magic_protection.name": "Magic Protection",
   "tetra.improvement.enchantment/ensorcellation_magic_protection.description": "Reduces damage taken from magical sources.",
   "tetra.improvement.destabilized/ensorcellation_magic_protection.name": "§5不稳定：Magic Protection",
   "tetra.improvement.destabilized/ensorcellation_magic_protection.description": "减少Magic Protection附魔的效果",
@@ -3195,5 +3195,120 @@
   "tetra.improvement.enchantment/cursed_silence.name": "§5沉默诅咒",
   "tetra.improvement.enchantment/cursed_silence.description": "穿戴者无法发出声音。",
   "tetra.improvement.enchantment/cursed_sinking.name": "§5沉沦诅咒",
-  "tetra.improvement.enchantment/cursed_sinking.description": "穿戴者会更快地被水淹没。"
+  "tetra.improvement.enchantment/cursed_sinking.description": "穿戴者会更快地被水淹没。",
+  
+  "block.tetra.rack": "架子",
+  "block.tetra.rack.description": "物品可以被挂在架子上。用右键放入或取出物品。\n在工作台附近挂在架子上的工具就像在玩家背包里一样可以用于合成，架子需要在 3x3x3 的范围内才能起效（以工作台向上一个方块为中心）。",
+  "item.tetra.holo.tooltip1": "轻触一下，球体便将图和文字投射到空中",
+  "item.tetra.holo.tooltip2": "§8[§7右键§8] §7使用",
+  "tetra.advancements.spelunking.scanner.description": "安装一个全息球扫描仪来更方便地找到远古遗迹",
+  "tetra.advancements.spelunking.scanner.title": "绝赞",
+  "tetra.advancements.upgrades.rack.description": "在工作台边放个架子，方便存取工具",
+  "tetra.advancements.upgrades.rack.title": "挂起来",
+  "tetra.holo.craft.breadcrumb.root": "物品",
+  "tetra.holo.craft.improvements": "改进",
+  "tetra.holo.craft.modular_bow": "弓",
+  "tetra.holo.craft.modular_double": "双头工具",
+  "tetra.holo.craft.modular_shield": "盾牌",
+  "tetra.holo.craft.modular_single": "单头工具",
+  "tetra.holo.craft.modular_sword": "刀剑",
+  "tetra.holo.craft.modular_toolbelt": "工具腰带",
+  "tetra.holo.craft.requirements": "需要",
+  "tetra.holo.craft.slot": "插槽",
+  "tetra.holo.craft.stats": "属性",
+  "tetra.holo.craft.variants": "变种",
+  "tetra.improvement.grip/blazing.description": "你可能在使用时着火，尤其是在炎热的环境中",
+  "tetra.improvement.grip/blazing.name": "燃烧",
+  "tetra.improvement.grip/ender_reverb.description": "在附近有末地生物时产生副作用。",
+  "tetra.improvement.grip/ender_reverb.name": "末影回响",
+  "tetra.improvement.scanner/adjustable.description": "可以调整扫描器的行为。",
+  "tetra.improvement.scanner/adjustable.name": "可调节",
+  "tetra.improvement.stonecutter_hone/efficiency.description": "增加挖掘效率",
+  "tetra.improvement.stonecutter_hone/efficiency.name": "打磨：挖掘效率",
+  "tetra.improvement.stonecutter_hone/tier.description": "增加挖掘等级 1",
+  "tetra.improvement.stonecutter_hone/tier.name": "打磨：挖掘等级",
+  "tetra.module.holo/core.description": "球体的中心安放着一个小圆柱体，摸着有点温暖。球体中的一切都通过某种方式与圆柱体相连。",
+  "tetra.module.holo/core.name": "黯淡的核心",
+  "tetra.module.holo/frame.description": "一个看起来是由某种金属做成的框架，承载着组成球体的各种部件。",
+  "tetra.module.holo/frame.item_name": "全息球",
+  "tetra.module.holo/frame.name": "远古框架",
+  "tetra.module.holo/scanner.description": "允许球体搜寻远古遗迹。当球体在玩家的背包中，它会在玩家面对的方向搜寻遗迹。当找到遗迹时会发出响声，拿着球体的时候会显示更多的信息。",
+  "tetra.slot.holo/attachment_0": "附件",
+  "tetra.slot.holo/attachment_1": "附件",
+  "tetra.slot.holo/core": "核心",
+  "tetra.slot.holo/frame": "框架",
+  "tetra.stats.earthbind": "地缚",
+  "tetra.stats.earthbind.tooltip": "攻击生物时有 §e10%%§r 的概率将它锁在原地 §e%s 秒§r。更容易出现在更低的高度，概率在基岩处达到最大的 §e50%%§r。",
+  "tetra.stats.holo.scannerHorizontalSpread": "水平搜寻范围",
+  "tetra.stats.holo.scannerHorizontalSpread.tooltip": "扫描器有 §e%s 个单位的水平搜索范围\n§7单位夹角：§e%s 度",
+  "tetra.stats.holo.scannerRange": "搜寻半径",
+  "tetra.stats.holo.scannerRange.tooltip": "扫描器可以触及最远 §e%s§r 个方块的地方",
+  "tetra.stats.holo.scannerVerticalSpread": "垂直搜寻范围",
+  "tetra.stats.holo.scannerVerticalSpread.tooltip": "扫描器覆盖了 §e%s 度的垂直范围",
+  "tetra.stats.holo.scannerVerticalSpread.tooltip_extended": "垂直范围被分成三部分，中间一部分覆盖了围绕中心的 §e20 度§7。上部和下部覆盖了 §e+-25 度§7以上的一切。上部和下部只在垂直范围大于等于 §e50 度§7时有效",
+  "tetra.stats.holo_speed": "冷却",
+  "tetra.stats.holo_speed.tooltip": "使用功能有 §e%sx§r 的冷却倍率",
+  "tetra.stats.manaRepair": "魔力修补",
+  "tetra.stats.manaRepair.tooltip": "这个物品会使用魔力慢慢自行修补，修补一点耐久消耗 §e%s§r 点魔力",
+  "tetra.tweak.scanner/adjustable_range.label": "效率",
+  "tetra.tweak.scanner/adjustable_range.left": "速度",
+  "tetra.tweak.scanner/adjustable_range.right": "范围",
+  "tetra.tweak.scanner/adjustable_range.tooltip": "修改更远的搜寻半径和更短的搜寻间隔之间的优先级。",
+  "tetra.tweak.scanner/adjustable_span.label": "范围",
+  "tetra.tweak.scanner/adjustable_span.left": "垂直",
+  "tetra.tweak.scanner/adjustable_span.right": "水平",
+  "tetra.tweak.scanner/adjustable_span.tooltip": "修改垂直或水平范围的优先级。",
+  "tetra.variant.basic_grip/acacia": "基础金合欢握把",
+  "tetra.variant.basic_grip/baobab": "基础猴面包木握把",
+  "tetra.variant.basic_grip/birch": "基础白桦握把",
+  "tetra.variant.basic_grip/blaze_rod": "基础烈焰棒握把",
+  "tetra.variant.basic_grip/bone": "基础骨制握把",
+  "tetra.variant.basic_grip/bronze": "基础青铜握把",
+  "tetra.variant.basic_grip/cherry": "基础樱木握把",
+  "tetra.variant.basic_grip/dark_oak": "基础深色橡木握把",
+  "tetra.variant.basic_grip/end_rod": "基础末地烛握把",
+  "tetra.variant.basic_grip/forged_beam": "再利用梁杆",
+  "tetra.variant.basic_grip/greatwood": "基础宏伟之木握把",
+  "tetra.variant.basic_grip/ironwood": "基础铁木握把",
+  "tetra.variant.basic_grip/jungle": "基础丛林木握把",
+  "tetra.variant.basic_grip/maple": "基础枫木握把",
+  "tetra.variant.basic_grip/spruce": "基础云杉木握把",
+  "tetra.variant.basic_grip/steel": "基础钢握把",
+  "tetra.variant.basic_grip/treated_wood": "基础防腐木握把",
+  "tetra.variant.core/dim": "黯淡的核心",
+  "tetra.variant.double_socket/mana_rune": "镶嵌 [§d魔法§r]",
+  "tetra.variant.double_socket/mana_rune.description": "一枚符文，被装进了工具的顶端。这枚符文会慢慢修补物品。",
+  "tetra.variant.frame/ancient": "远古框架",
+  "tetra.variant.scanner/scanner": "Scanner",
+  "tetra.variant.single_socket/mana_rune": "镶嵌 [§d魔法§r]",
+  "tetra.variant.single_socket/mana_rune.description": "一枚符文，被装进了头部与手柄的连接处。这枚符文会慢慢修补物品。",
+  "tetra.variant.spike/bronze": "青铜刺",
+  "tetra.variant.spike/copper": "铜刺",
+  "tetra.variant.spike/electrum": "琥珀金刺",
+  "tetra.variant.spike/gold": "金刺",
+  "tetra.variant.spike/lead": "铅刺",
+  "tetra.variant.spike/nickel": "镍刺",
+  "tetra.variant.spike/silver": "银刺",
+  "tetra.variant.spike/steel": "钢刺",
+  "tetra.variant.spike/tin": "锡刺",
+  "tetra.variant.sturdy_boss/bronze": "坚固青铜盾心",
+  "tetra.variant.sturdy_boss/copper": "坚固铜盾心",
+  "tetra.variant.sturdy_boss/electrum": "坚固琥珀金盾心",
+  "tetra.variant.sturdy_boss/gold": "坚固金盾心",
+  "tetra.variant.sturdy_boss/lead": "坚固铅盾心",
+  "tetra.variant.sturdy_boss/nickel": "坚固镍盾心",
+  "tetra.variant.sturdy_boss/silver": "坚固银盾心",
+  "tetra.variant.sturdy_boss/steel": "坚固钢盾心",
+  "tetra.variant.sturdy_boss/tin": "坚固锡盾心",
+  "tetra.variant.sword_socket/mana_rune": "镶嵌 [§d魔法§r]",
+  "tetra.variant.sword_socket/mana_rune.description": "一枚符文，被装进了剑刃与剑柄的连接处。这枚符文会慢慢修补物品。",
+  "tetra/schema/holo/scanner/adjustable.description": "用两个螺栓来改进扫描器，它的一些属性变得可调节了。",
+  "tetra/schema/holo/scanner/adjustable.name": "可调节",
+  "tetra/schema/holo/scanner/adjustable.slot1": "螺栓",
+  "tetra/schema/holo/scanner/scanner.description": "利用 §l末影之眼§r 的性质来解锁球体的扫描功能。\n当球体在玩家的背包中，它会在玩家面对的方向搜寻遗迹。当找到遗迹时会发出响声，拿着球体的时候会显示更多的信息。",
+  "tetra/schema/holo/scanner/scanner.name": "扫描器",
+  "tetra/schema/holo/scanner/scanner.slot1": "末影之眼",
+  "tetra/schema/sword/stonecutter/stonecutter.description": "用切石器替换当前的剑刃。这是一把能轻易切开岩石的沉重的剑刃。",
+  "tetra/schema/sword/stonecutter/stonecutter.name": "切石器",
+  "tetra/schema/sword/stonecutter/stonecutter.slot1": "切石器"
 }
