added materials UI

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -3,7 +3,9 @@
 
   "item.tetra.holo.tooltip1": "At a touch the sphere projects diagrams and glyphs onto nothingness",
   "item.tetra.holo.tooltip2": "§8[§7right click§8] §7use",
-  "tetra.holo.craft.breadcrumb.root": "Items",
+  "tetra.holo.craft.breadcrumb.root": "Craft",
+  "tetra.holo.craft.breadcrumb.materials": "Materials",
+  "tetra.holo.craft.materials": "Materials",
   "tetra.holo.craft.modular_sword": "Blades",
   "tetra.holo.craft.modular_toolbelt": "Toolbelts",
   "tetra.holo.craft.modular_double": "Double headed",
@@ -15,6 +17,25 @@
   "tetra.holo.craft.improvements": "Improvements",
   "tetra.holo.craft.stats": "Stats",
   "tetra.holo.craft.variants": "Variants",
+
+  "tetra.holo.craft.materials.stat.primary": "hard",
+  "tetra.holo.craft.materials.stat.primary.tooltip": "The material's hardness or sharpness, or the ability to shape this material into something with a hard/sharp edge",
+  "tetra.holo.craft.materials.stat.secondary": "dens",
+  "tetra.holo.craft.materials.stat.secondary.tooltip": "The material's density, rigidity or weight, how much kinetic energy does this carry as it's swung",
+  "tetra.holo.craft.materials.stat.tertiary": "flex",
+  "tetra.holo.craft.materials.stat.tertiary.tooltip": "The material's flexibility or tensile strength, how fast does this material spring back when bent",
+  "tetra.holo.craft.materials.stat.tool_level": "tlvl",
+  "tetra.holo.craft.materials.stat.tool_level.tooltip": "The base value for tool level for modules crafted from this material",
+  "tetra.holo.craft.materials.stat.tool_efficiency": "teff",
+  "tetra.holo.craft.materials.stat.tool_efficiency.tooltip": "The base value tool efficiency for modules crafted from this material",
+  "tetra.holo.craft.materials.stat.durability": "dura",
+  "tetra.holo.craft.materials.stat.durability.tooltip": "The base durability for modules crafted from this material",
+  "tetra.holo.craft.materials.stat.integrity_gain": "+int",
+  "tetra.holo.craft.materials.stat.integrity_gain.tooltip": "The base value for integrity gain for modules crafted from this material",
+  "tetra.holo.craft.materials.stat.integrity_cost": "-int",
+  "tetra.holo.craft.materials.stat.integrity_cost.tooltip": "The base value for integrity cost for modules crafted from this material",
+  "tetra.holo.craft.materials.stat.magic_capacity": "magi",
+  "tetra.holo.craft.materials.stat.magic_capacity.tooltip": "The magic capacity for major modules crafted from this material",
 
   "tetra.workbench.slot_detail.details_tab": "Details",
   "tetra.workbench.slot_detail.craft_tab": "Craft",
@@ -250,6 +271,43 @@
   "tetra.variant_category.skin.label": "Skin",
   "tetra.variant_category.stone.label": "Stone",
   "tetra.variant_category.wood.label": "Wood",
+
+  "tetra.material.obsidian":  "Obsidian",
+  "tetra.material.flint": "Flint",
+  "tetra.material.acacia":  "Acacia",
+  "tetra.material.bone": "Bone",
+  "tetra.material.stone":  "Stone",
+  "tetra.material.andesite": "Andesite",
+  "tetra.material.granite":  "Granite",
+  "tetra.material.birch": "Birch",
+  "tetra.material.shulker_shell":  "Shulker shell",
+  "tetra.material.stick": "Stick",
+  "tetra.material.phantom_membrane":  "Phantom membrane",
+  "tetra.material.dragon_sinew": "Dragon sinew",
+  "tetra.material.leather":  "Leather",
+  "tetra.material.iron": "Iron",
+  "tetra.material.blaze_rod":  "Blaze rod",
+  "tetra.material.weeping_vine": "Weeping vine",
+  "tetra.material.diamond":  "Diamond",
+  "tetra.material.diorite": "Diorite",
+  "tetra.material.vent_plate":  "Vent plate",
+  "tetra.material.gold": "Gold",
+  "tetra.material.string":  "String",
+  "tetra.material.turtle_scute": "Turtle scute",
+  "tetra.material.end_rod":  "End rod",
+  "tetra.material.oak": "Oak",
+  "tetra.material.warped":  "Warped",
+  "tetra.material.wool": "Wool",
+  "tetra.material.blackstone":  "Blackstone",
+  "tetra.material.netherite": "Netherite",
+  "tetra.material.dark_oak":  "Dark oak",
+  "tetra.material.emerald": "Emerald",
+  "tetra.material.hide":  "Hide",
+  "tetra.material.twisting_vine": "Twisting vine",
+  "tetra.material.forged_beam":  "Forged beam",
+  "tetra.material.vine": "Vine",
+  "tetra.material.spruce":  "Spruce",
+  "tetra.material.crimson": "Crimson",
 
   "item.tetra.modular.broken": "Broken",
   "item.tetra.modular.empty_slot": "Empty",
