added display of innate effects & improvements to material ui fix: possibly fixed holosphere cme

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -30,12 +30,16 @@
   "tetra.holo.craft.materials.stat.tool_efficiency.tooltip": "The base value tool efficiency for modules crafted from this material",
   "tetra.holo.craft.materials.stat.durability": "dura",
   "tetra.holo.craft.materials.stat.durability.tooltip": "The base durability for modules crafted from this material",
-  "tetra.holo.craft.materials.stat.integrity_gain": "+int",
-  "tetra.holo.craft.materials.stat.integrity_gain.tooltip": "The base value for integrity gain for modules crafted from this material",
-  "tetra.holo.craft.materials.stat.integrity_cost": "-int",
-  "tetra.holo.craft.materials.stat.integrity_cost.tooltip": "The base value for integrity cost for modules crafted from this material",
+  "tetra.holo.craft.materials.stat.integrity": "int",
+  "tetra.holo.craft.materials.stat.integrity.tooltip": "The base values for integrity gain and integrity cost for modules crafted from this material (gain | cost)",
   "tetra.holo.craft.materials.stat.magic_capacity": "magi",
   "tetra.holo.craft.materials.stat.magic_capacity.tooltip": "The magic capacity for major modules crafted from this material",
+
+  "tetra.holo.craft.materials.stat_modifier": "mod",
+  "tetra.holo.craft.materials.stat_modifier.tooltip": "Major modules crafted from this material will have the §e%s§r modifier:",
+
+  "tetra.holo.craft.materials.stat_effect": "eff",
+  "tetra.holo.craft.materials.stat_effect.tooltip": "Modules crafted from this material will provide the §e%s§r effect",
 
   "tetra.workbench.slot_detail.details_tab": "Details",
   "tetra.workbench.slot_detail.craft_tab": "Craft",
@@ -267,46 +271,46 @@
   "tetra.variant_category.gem.label": "Gemstone",
   "tetra.variant_category.metal.label": "Metal",
   "tetra.variant_category.misc.label": "Misc",
-  "tetra.variant_category.scale.label": "Scales",
+  "tetra.variant_category.scale.label": "Scale",
   "tetra.variant_category.skin.label": "Skin",
   "tetra.variant_category.stone.label": "Stone",
   "tetra.variant_category.wood.label": "Wood",
 
-  "tetra.material.obsidian":  "Obsidian",
+  "tetra.material.obsidian": "Obsidian",
   "tetra.material.flint": "Flint",
-  "tetra.material.acacia":  "Acacia",
+  "tetra.material.acacia": "Acacia",
   "tetra.material.bone": "Bone",
-  "tetra.material.stone":  "Stone",
+  "tetra.material.stone": "Stone",
   "tetra.material.andesite": "Andesite",
-  "tetra.material.granite":  "Granite",
+  "tetra.material.granite": "Granite",
   "tetra.material.birch": "Birch",
-  "tetra.material.shulker_shell":  "Shulker shell",
+  "tetra.material.shulker_shell": "Shulker shell",
   "tetra.material.stick": "Stick",
-  "tetra.material.phantom_membrane":  "Phantom membrane",
+  "tetra.material.phantom_membrane": "Phantom membrane",
   "tetra.material.dragon_sinew": "Dragon sinew",
-  "tetra.material.leather":  "Leather",
+  "tetra.material.leather": "Leather",
   "tetra.material.iron": "Iron",
-  "tetra.material.blaze_rod":  "Blaze rod",
+  "tetra.material.blaze_rod": "Blaze rod",
   "tetra.material.weeping_vine": "Weeping vine",
-  "tetra.material.diamond":  "Diamond",
+  "tetra.material.diamond": "Diamond",
   "tetra.material.diorite": "Diorite",
-  "tetra.material.vent_plate":  "Vent plate",
+  "tetra.material.vent_plate": "Vent plate",
   "tetra.material.gold": "Gold",
-  "tetra.material.string":  "String",
+  "tetra.material.string": "String",
   "tetra.material.turtle_scute": "Turtle scute",
-  "tetra.material.end_rod":  "End rod",
-  "tetra.material.oak": "Oak",
-  "tetra.material.warped":  "Warped",
+  "tetra.material.end_rod": "End rod",
+  "tetra.material.oak": "Wood",
+  "tetra.material.warped": "Warped",
   "tetra.material.wool": "Wool",
-  "tetra.material.blackstone":  "Blackstone",
+  "tetra.material.blackstone": "Blackstone",
   "tetra.material.netherite": "Netherite",
-  "tetra.material.dark_oak":  "Dark oak",
+  "tetra.material.dark_oak": "Dark oak",
   "tetra.material.emerald": "Emerald",
-  "tetra.material.hide":  "Hide",
+  "tetra.material.hide": "Hide",
   "tetra.material.twisting_vine": "Twisting vine",
-  "tetra.material.forged_beam":  "Forged beam",
+  "tetra.material.forged_beam": "Forged beam",
   "tetra.material.vine": "Vine",
-  "tetra.material.spruce":  "Spruce",
+  "tetra.material.spruce": "Spruce",
   "tetra.material.crimson": "Crimson",
 
   "item.tetra.modular.broken": "Broken",
